--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "webpack-dotenv-plugin": "^2.1.0"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "react": "^16.6.0",
         "react-dom": "^16.6.0"
     }
