--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5",
-    "tabWidth": 4
+    "tabWidth": 4,
+    "jsxBracketSameLine": true
 }
