--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-    "presets": ["@babel/env", "@babel/flow", "@babel/react"]
+    "presets": ["@babel/env", "@babel/flow", "@babel/react"],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties"
+    ]
 }
