--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "axios": "^0.18.0",
         "blueprint-css": "^3.0.0-beta.0",
         "react": "^16.6.0",
-        "react-dom": "^16.6.0"
+        "react-dom": "^16.6.0",
+        "react-router-dom": "^4.3.1"
     }
 }
