--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "author": "OpenDevUFCG",
     "license": "MIT",
     "scripts": {
+        "test": "yarn flow",
         "build": "webpack",
         "start": "webpack-dev-server --progress --colors --inline --hot --host 0.0.0.0",
         "lint": "eslint .",
