--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,26 @@
 language: node_js
 
 node_js:
-  - 'node'
-  - 'lts/*'
+    - 'node'
+    - 'lts/*'
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_85c87c2dd1d6_key -iv $encrypted_85c87c2dd1d6_iv -in gae/client-secret.json.enc -out gae/client-secret.json -d
+    - openssl aes-256-cbc -K $encrypted_85c87c2dd1d6_key -iv $encrypted_85c87c2dd1d6_iv -in gae/client-secret.json.enc -out gae/client-secret.json -d
 
-before_deploy: 
-  - yarn build
-  - rm -rf node_modules/
+before_deploy:
+    - yarn build
+    - rm -rf node_modules/
 
 jobs:
-  include:
-    - stage: "Tests"
-      name: "Lint"
-      script: yarn lint
-    - stage: deploy
-      name: "Deploy to App Engine"
-      script: skip
-      deploy:
-        provider: gae
+    include:
+        - stage: 'Tests'
+          name: 'Lint'
+          script: yarn lint
+        - stage: deploy
+          if: branch = master
+          name: 'Deploy to App Engine'
+          script: skip
+          deploy:
+              provider: gae
+              keyfile: gae/client-secret.json
+              project: $PROJECT_ID
