--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,15 @@ language: node_js
 node_js:
     - node
     - lts/*
+
+cache:
+    directories:
+        - node_modules
+
 before_deploy:
-    - openssl aes-256-cbc -K $encrypted_85c87c2dd1d6_key -iv $encrypted_85c87c2dd1d6_iv -in gae/client-secret.json.enc -out gae/client-secret.json -d
     - yarn build
     - rm -rf node_modules/
+
 jobs:
     include:
         - stage: Tests
@@ -13,9 +18,12 @@ jobs:
           script: yarn lint
         - stage: deploy
           if: branch = master
-          name: Deploy to App Engine
+          name: Deploy to Github Pages
           script: skip
           deploy:
-              provider: gae
-              keyfile: gae/client-secret.json
-              project: '$PROJECT_ID'
+              provider: pages
+              skip_cleanup: true
+              github_token: $PROJECT_ID
+              local_dir: build
+              on:
+                  branch: master
