--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ jobs:
               provider: pages
               skip_cleanup: true
               github_token: $github_token
-              local_dir: public
+              local_dir: docs
               on:
                   branch: 48-deploy-ghpages
