--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.4",
         "css-loader": "^1.0.1",
+        "dotenv-webpack": "^1.7.0",
         "eslint": "^5.8.0",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-config-prettier": "^3.1.0",
@@ -44,8 +45,7 @@
         "style-loader": "^0.23.1",
         "webpack": "^4.24.0",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10",
-        "webpack-dotenv-plugin": "^2.1.0"
+        "webpack-dev-server": "^3.1.10"
     },
     "dependencies": {
         "axios": "^0.18.0",
