--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
         "style-loader": "^0.23.1",
         "webpack": "^4.24.0",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10",
-        "webpack-dotenv-plugin": "^2.1.0"
+        "webpack-dev-server": "^3.1.10"
     },
     "dependencies": {
         "axios": "^0.18.0",
