--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,24 @@ language: node_js
 node_js:
     - node
     - lts/*
-# before_deploy:
-#     - openssl aes-256-cbc -K $encrypted_85c87c2dd1d6_key -iv $encrypted_85c87c2dd1d6_iv -in gae/client-secret.json.enc -out gae/client-secret.json -d
-#     - yarn build
-#     - rm -rf node_modules/
+before_deploy:
+    - yarn build
+    - rm -rf node_modules/
 jobs:
     include:
         - stage: Tests
           name: Lint
           script: yarn lint
-#         - stage: deploy
-#           if: branch = master
-#           name: Deploy to App Engine
-#           script: skip
-#           deploy:
-#               provider: gae
-#               keyfile: gae/client-secret.json
-#               project: '$PROJECT_ID'
+        - stage: deploy
+          if: branch = master
+          name: Deploy to Github Pages
+          script: skip
+          deploy:
+              provider: pages
+              skip_cleanup: true
+              github_token: '$GITHUB_TOKEN'
+              keep-history: true
+              local_dir: docs
+              fqdn: issueai.opendevufcg.org
+              on:
+                  branch: master
