--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "blueprint-css": "^3.0.0-beta.0",
         "react": "^16.6.0",
         "react-dom": "^16.6.0",
-        "react-router-dom": "^4.3.1"
+        "react-router-dom": "^4.3.1",
+        "react-tooltip": "^3.11.1"
     }
 }
