--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
               skip_cleanup: true
               github_token: '$GITHUB_TOKEN'
               keep-history: true
-              local_dir: docs
+              local_dir: public
               fqdn: issueai.opendevufcg.org
               on:
                   branch: master
