--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,7 @@
     "short_name": "IssueAi",
     "start_url": "/",
     "display": "standalone",
+    "orientation": "portrait",
     "theme_color": "#000000",
     "background_color": "#FFF",
     "description": "Plataforma para projetos open source de Computação@UFCG.",
