--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.2",
         "eslint-plugin-react": "^7.11.1",
+        "file-loader": "^4.2.0",
         "flow-bin": "^0.85.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.1.3",
@@ -48,8 +49,10 @@
     "dependencies": {
         "axios": "^0.18.0",
         "blueprint-css": "^3.0.0-beta.0",
+        "prop-types": "^15.7.2",
         "react": "^16.6.0",
         "react-dom": "^16.6.0",
+        "react-markdown": "^4.2.2",
         "react-router-dom": "^4.3.1",
         "react-tooltip": "^3.11.1"
     }
