--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.2",
         "eslint-plugin-react": "^7.11.1",
+        "file-loader": "^4.2.0",
         "flow-bin": "^0.85.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.1.3",
@@ -41,6 +42,7 @@
         "pretty-quick": "^1.8.0",
         "react-dev-utils": "^6.1.1",
         "style-loader": "^0.23.1",
+        "url-loader": "^2.2.0",
         "webpack": "^4.24.0",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.11"
