--- a/.gitignore
+++ b/.gitignore
@@ -160,4 +160,7 @@ $RECYCLE.BIN/
 ### env files
 docs/
 
+### vscode
+.vscode
+
 # End of https://www.gitignore.io/api/node,linux,macos,windows,visualstudiocode
