--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "scripts": {
         "test": "yarn flow",
-        "build": "webpack",
-        "start": "webpack-dev-server --progress --colors --inline --hot --host 0.0.0.0",
+        "build": "webpack --config ./webpack/webpack.prod.js",
+        "start": "webpack-dev-server --config ./webpack/webpack.dev.js --progress --colors --inline --hot --host 0.0.0.0",
         "lint": "eslint .",
         "flow": "flow"
     },
@@ -55,6 +55,7 @@
         "react-dom": "^16.6.0",
         "react-markdown": "^4.2.2",
         "react-router-dom": "^4.3.1",
-        "react-tooltip": "^3.11.1"
+        "react-tooltip": "^3.11.1",
+        "webpack-merge": "^4.2.2"
     }
 }
