--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.4",
         "css-loader": "^1.0.1",
+        "dotenv-webpack": "^1.7.0",
         "eslint": "^5.8.0",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-config-prettier": "^3.1.0",
