--- a/package.json
+++ b/package.json
@@ -50,8 +50,11 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "@apollo/react-hooks": "^3.1.3",
+        "apollo-boost": "^0.4.4",
         "axios": "^0.18.0",
         "blueprint-css": "^3.0.0-beta.0",
+        "graphql": "^14.5.8",
         "prop-types": "^15.7.2",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
