--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dependencies": {
         "@apollo/react-hooks": "^3.1.3",
         "apollo-boost": "^0.4.4",
+        "apollo-link": "^1.2.13",
         "axios": "^0.18.0",
         "blueprint-css": "^3.0.0-beta.0",
         "graphql": "^14.5.8",
