--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "trailingComma": "es5",
-    "tabWidth": 4,
+    "tabWidth": 2,
     "jsxBracketSameLine": true
 }
