--- a/package.json
+++ b/package.json
@@ -1,69 +1,66 @@
 {
-    "name": "IssueAi",
-    "version": "1.0.0",
-    "description": "O IssueAi cria um espaço de visibilidade para os projetos open source criado por alunos da Computação@UFCG.",
-    "repository": "https://github.com/OpenDevUFCG/IssueAi",
-    "author": "OpenDevUFCG",
-    "license": "MIT",
-    "scripts": {
-        "test": "yarn flow",
-        "build": "webpack --config ./webpack/webpack.prod.js",
-        "start": "webpack-dev-server --config ./webpack/webpack.dev.js --progress --colors --inline --hot --host 0.0.0.0",
-        "lint": "eslint .",
-        "flow": "flow"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "pretty-quick --staged"
-        }
-    },
-    "devDependencies": {
-        "@babel/core": "^7.1.2",
-        "@babel/plugin-proposal-class-properties": "^7.1.0",
-        "@babel/preset-env": "^7.1.0",
-        "@babel/preset-flow": "^7.0.0",
-        "@babel/preset-react": "^7.0.0",
-        "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.4",
-        "css-loader": "^1.0.1",
-        "dotenv-webpack": "^1.7.0",
-        "eslint": "^5.8.0",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-config-prettier": "^3.1.0",
-        "eslint-plugin-flowtype": "^3.2.0",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jsx-a11y": "^6.1.2",
-        "eslint-plugin-react": "^7.11.1",
-        "file-loader": "^4.2.0",
-        "flow-bin": "^0.85.0",
-        "html-webpack-plugin": "^3.2.0",
-        "husky": "^1.1.3",
-        "mini-css-extract-plugin": "^0.4.4",
-        "prettier": "^1.14.3",
-        "pretty-quick": "^1.8.0",
-        "ramda": "^0.26.1",
-        "react-dev-utils": "^6.1.1",
-        "style-loader": "^0.23.1",
-        "url-loader": "^2.2.0",
-        "webpack": "^4.24.0",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.11",
-        "webpack-merge": "^4.2.2"
-    },
-    "dependencies": {
-        "@apollo/react-hooks": "^3.1.3",
-        "apollo-boost": "^0.4.4",
-        "apollo-link": "^1.2.13",
-        "axios": "^0.18.0",
-        "blueprint-css": "^3.0.0-beta.0",
-        "graphql": "^14.5.8",
-        "prop-types": "^15.7.2",
-        "ramda": "^0.26.1",
-        "react": "^16.10.2",
-        "react-dom": "^16.10.2",
-        "react-emoji-render": "^1.0.0",
-        "react-markdown": "^4.2.2",
-        "react-router-dom": "^4.3.1",
-        "react-tooltip": "^3.11.1"
+  "name": "IssueAi",
+  "version": "1.0.0",
+  "description": "O IssueAi cria um espaço de visibilidade para os projetos open source criado por alunos da Computação@UFCG.",
+  "repository": "https://github.com/OpenDevUFCG/IssueAi",
+  "author": "OpenDevUFCG",
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack --config ./webpack/webpack.prod.js",
+    "dev": "webpack-dev-server --config ./webpack/webpack.dev.js --progress --colors --inline --hot --host 0.0.0.0",
+    "lint": "eslint .",
+    "prettier": "prettier --write \"src/**/*.js\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
     }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "dotenv-webpack": "^1.7.0",
+    "eslint": "^5.8.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.1.3",
+    "mini-css-extract-plugin": "^0.4.4",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.8.0",
+    "ramda": "^0.26.1",
+    "react-dev-utils": "^6.1.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.11",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.4",
+    "apollo-link": "^1.2.13",
+    "axios": "^0.18.0",
+    "blueprint-css": "^3.0.0-beta.0",
+    "graphql": "^14.5.8",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.26.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-emoji-render": "^1.0.0",
+    "react-markdown": "^4.2.2",
+    "react-router-dom": "^4.3.1",
+    "react-tooltip": "^3.11.1"
+  }
 }
